<resources>
    <string name="app_name">NonEstDeus</string>
    <string name="title_random">Random</string>
    <string name="title_by_number">By Number</string>
    <string name="title_by_author">By Author</string>
    <string name="title_license">License</string>
    <string name="title_send_feedback"> Feedback</string>
    <string name="quoteNum">000</string>
    <string name="quoteText">This is some test quote text so that something displays on the screen.</string>
    <string name="authorText">Me myself and I</string>
    <string name="buttonText">Get a random quote.</string>
    <string name="action_settings">Settings</string>
    <string name="opening_toast_text">Welcome to Non est deus Atheist Quotes App!</string>
    <string name="clip_description_label">Non est deus quote</string>
    <string name="clipboard_copy_toast">Copied to Clipboard</string>
    <string name="error_occurred">Some error occurred. Please try again.</string>
    <string name="license">NonEstDeus App. Ver. %s \n\nCopyright © 2022, Patrick Leonard\n\nThis software is provided \'as is\' and without any express or implied warranties, including, but no limited to, the implied warranties of merchantability and fitness for a particular purpose are disclaimed.\n\nNonEstDeus is an open source project. The source code for NonEstDeus can be found, with license, on Github:\nhttps://github.com/PatrickLeonard/NonEstDeus</string>
    <string name="actionbar_subtitle">Atheism Quotes</string>
    <string name="change_color_palette">Colors</string>
    <string name="facebook_app_id">283909378905424</string>
    <string name="facebook_client_token">5fd05d0d329b74f160671e8dffbc3741</string>
    <string name="palette_dialog_icon">Palette Dialog Icon</string>
    <string name="select_theme_color_scheme">Select Theme Color Scheme:</string>
    <string-array name="theme_titles">
        <item>Blue Gray - Cyan</item>
        <item>Light Green - Pink</item>
        <item>Pink - Indigo</item>
        <item>Orange - Blue</item>
        <item>Purple - Amber</item>
        <item>Brown - Blue</item>
    </string-array>
    <string name="dawkins_quote_1">We are all atheists about most of the gods that humanity has ever believed in. Some of us just go one god further.</string>
    <string name="douglas_adams_author">Douglas Adams</string>
    <string name="douglas_adams_quote_1">Isn\'t it enough to see that a garden is beautiful without having to believe that there are fairies at the bottom of it too?</string>
    <string name="hitchens_quote_1">That which can be asserted without evidence, can be dismissed without evidence.</string>
    <string name="voltaire_quote_1">Those who can make you believe absurdities, can make you commit atrocities.</string>
    <string name="asimov_quote_1">Properly read, the Bible is the most potent force for atheism ever conceived.</string>
    <string name="asimov_quote_2">The creation tale of Genesis is very impressive, even in modern terms, if it is treated symbolically and allegorically. But again, the tendency for many people is to accept it literally and to fight ferociously against deviating from it by one iota.</string>
    <string name="asimov_quote_3">I am an atheist, out and out. It took me a long time to say it. I\'ve been an atheist for years and years, but somehow I felt it was intellectually unrespectable to say one was an atheist, because it assumed knowledge that one didn\'t have. Somehow, it was better to say one was a humanist or an agnostic. I finally decided that I\'m a creature of emotion as well as of reason. Emotionally, I am an atheist. I don\'t have the evidence to prove that God doesn\'t exist, but I so strongly suspect he doesn\'t that I don\'t want to waste my time.</string>
    <string name="napoleon_quote_1">Religion is excellent stuff for keeping common people quiet. Religion is what keeps the poor from murdering the rich.</string>
    <string name="epicurus_quote_1">Is God willing to prevent evil, but not able?\n\nThen he is not omnipotent.\n\nIs he able, but not willing?\n\nThen he is malevolent.\n\nIs he both able and willing?\n\n Then whence cometh evil?\n\nIs he neither able nor willing?\n\nThen why call him God?</string>
    <string name="carlin_quote_1">Atheism is a non-prophet organization.</string>
    <string name="carlin_quote_2">Religion has actually convinced people that there\'s an invisible man living in the sky who watches everything you do, every minute of every day. And the invisible man has a special list of ten things he does not want you to do. And if you do any of these ten things, he has a special place, full of fire and smoke and burning and torture and anguish, where he will send you to live and suffer and burn and choke and scream and cry forever and ever \'til the end of time!\n\nBut He loves you. He loves you, and He needs money! He always needs money! He\'s all-powerful, all-perfect, all-knowing, and all-wise, somehow just can\'t handle money!</string>
    <string name="carlin_quote_3">I noticed that all the prayers I used to offer to God, and all the prayers I now offer to Joe Pesci, are being answered at about the same fifty percent rate. Half the time I get what I want, half the time I don\'t&#8230;Same as the four-leaf clover and the horseshoe&#8230;same as the voodoo lady who tells you your fortune by squeezing the goat\'s testicles. It\'s all the same&#8230;so just pick your superstition, sit back, make a wish, and enjoy yourself&#8230;</string>
    <string name="carlin_quote_4">Religion is like drugs, it destroys the thinking mind.</string>
    <string name="twain_quote_1">The Bible has noble poetry in it… and some good morals and a wealth of obscenity, and upwards of a thousand lies.</string>
    <string name="hitchens_quote_2">Human decency is not derived from religion. It precedes it.</string>
    <string name="pirsig_quote_1">When one person suffers from a delusion, it is called insanity. When many people suffer from a delusion it is called a Religion.</string>
    <string name="colbert_quote_1">Agnostics are just atheists without balls.</string>
    <string name="vonnegut_quote_1">I am a humanist, which means, in part, that I have tried to behave decently without expectations of rewards or punishments after I am dead.</string>
    <string name="tom_wolfe_quote_1">A cult is a religion with no political power.</string>
    <string name="neil_degrasse_tyson_quote_1">The more I learn about the universe, the less convinced I am that there\'s any sort of benevolent force that has anything to do with it, at all.</string>
    <string name="murakami_quote_1">If you think God\'s there, He is. If you don\'t, He isn\'t. And if that\'s what God\'s like, I wouldn\'t worry about it.</string>
    <string name="zola_quote_1">Civilization will not attain to its perfection until the last stone from the last church falls on the last priest.</string>
    <string name="pryor_quote_1">The reason people use a crucifix against vampires is because vampires are allergic to bullshit.</string>
    <string name="sagan_quote_1">I don\'t want to believe. I want to know.</string>
    <string name="sagan_quote_2">Science is not only compatible with spirituality; it is a profound source of spirituality. When we recognize our place in an immensity of light‐years and in the passage of ages, when we grasp the intricacy, beauty, and subtlety of life, then that soaring feeling, that sense of elation and humility combined, is surely spiritual. So are our emotions in the presence of great art or music or literature, or acts of exemplary selfless courage such as those of Mohandas Gandhi or Martin Luther King, Jr. The notion that science and spirituality are somehow mutually exclusive does a disservice to both.</string>
    <string name="sagan_quote_3">For thousands of years humans were oppressed - as some of us still are - by the notion that the universe is a marionette whose strings are pulled by a god or gods, unseen and inscrutable.</string>
    <string name="sagan_quote_4">An atheist is someone who is certain that God does not exist, someone who has compelling evidence against the existence of God. I know of no such compelling evidence. Because God can be relegated to remote times and places and to uptime causes, we would have to know a great deal more about the Universe than we do now to be sure that no such God exists. To be certain of the existence of God and you be certain of the nonexistence of God seem to me to be the confident extremes in a subject so riddled with doubt and uncertainty as to inspire very little confidence indeed.</string>
    <string name="sagan_quote_5">Extraordinary claims require extraordinary evidence.</string>
    <string name="sam_harris_quote_1">We have a choice. We have two options as human beings. We have a choice between conversation and war. That\'s it. Conversation and violence. And faith is a conversation stopper.</string>
    <string name="roddenberry_quote_1">We must question the story logic of having an all-knowing all-powerful God, who creates faulty Humans, and then blames them for his own mistakes.</string>
    <string name="roddenberry_quote_2">For most people, religion is nothing more than a substitute for a malfunctioning brain. If people need religion, ignore them and maybe they will ignore you, and you can go on with your life. It wasn\'t until I was beginning to do Star Trek that the subject of religion arose. What brought it up was that people were saying that I would have a chaplain on board the Enterprise. I replied, \"No, we don\'t.\"</string>
    <string name="lewis_black_quote_1">Who knew that the devil had a factory where he made millions of fossils, which his minions distributed throughout the earth, in order to confuse my tiny brain?</string>
    <string name="einstein_quote_1">I don\'t try to imagine a personal God; it suffices to stand in awe at the structure of the world, insofar as it allows our inadequate senses to appreciate it.</string>
    <string name="einstein_quote_2">The word god is for me nothing more than the expression and product of human weaknesses, the Bible a collection of honourable, but still primitive legends which are nevertheless pretty childish. No interpretation no matter how subtle can (for me) change this.</string>
    <string name="ruth_green_quote_1">There was a time when religion ruled the world. It is known as the Dark Ages.</string>
    <string name="lincoln_quote_1">The Bible is not my book nor Christianity my profession. I could never give assent to the long, complicated statements of Christian dogma.</string>
    <string name="richard_morgan_quote_1">A preoccupation with the next world clearly shows an inability to cope credibly with this one.</string>
    <string name="sam_harris_quote_2">Theology is ignorance with wings.</string>
    <string name="duhamel_quote_1">I have too much respect for the idea of God to make it responsible for such an absurd world.</string>
    <string name="marquis_de_sade_quote_1">To judge from the notions expounded by theologians, one must conclude that God created most men simply with a view to crowding hell.</string>
    <string name="ruth_green_quote_2">I studied every page of this book, and I didn\'t find enough love to fill a salt shaker. God is not love in the Bible; God is vengeance, from Alpha to Omega.</string>
    <string name="john_c_wright_quote_1">If atheism solved all human woe, then the Soviet Union would have been an empire of joy and dancing bunnies, instead of the land of corpses.</string>
    <string name="bakunin_quote_1">If God really existed, it would be necessary to abolish Him.</string>
    <string name="twain_quote_2">Nothing exists but you. And you are but a thought.</string>
    <string name="sam_harris_quote_3">Religious moderation is the product of secular knowledge and scriptural ignorance.</string>
    <string name="gervais_quote_1">You won\'t burn in hell. But be nice anyway.</string>
</resources>