<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginBottom="@dimen/fragment_layout_bottom_margin"
    tools:context=".fragments.QuoteFragment"
    android:id="@+id/relativeLayout"
    android:background="@android:color/holo_blue_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quoteNumTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff000000"
        android:text="@string/quoteNum"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quoteAuthorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorText"
        android:layout_below="@id/quoteNumTextView"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quoteTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/quoteAuthorTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/quoteText"
        android:textIsSelectable="true"
        android:textSize="@dimen/abc_text_size_title_material" />

    <ImageView
        android:contentDescription="@string/clipboard_copy_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copyQuoteIcon"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/copy_icon"
        android:clickable="true"
        android:focusable="true"/>

    <com.facebook.share.widget.ShareButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fb_share_button"
        android:layout_toStartOf="@id/copyQuoteIcon"
        android:layout_alignBottom="@id/copyQuoteIcon"
        android:layout_marginEnd="12dp"/>

</RelativeLayout>
