<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NonEstDeusActivity"
    android:id="@+id/relativeLayout"
    android:background="@android:color/holo_blue_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quoteNumTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#96ffffff"
        android:text="@string/quoteNum"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quoteText"
        android:id="@+id/quoteTextView"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_below="@+id/quoteNumTextView"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonText"
        android:id="@+id/quoteButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/quoteNumTextView"
        android:layout_alignStart="@+id/quoteNumTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/authorText"
        android:id="@+id/quoteAuthorTextView"
        android:layout_above="@+id/quoteButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="35dp"
        android:textSize="@dimen/abc_text_size_title_material"
        android:textIsSelectable="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copyQuoteIcon"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/quoteTextView"
        android:layout_alignEnd="@+id/quoteTextView"
        android:src="@drawable/copy_icon"
        android:clickable="true"
        android:focusable="true"/>

</RelativeLayout>
